# clippers

./: .gitignore  .nvim.lua  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
src/: main.rs
src/commands/: list.rs  mod.rs  pick.rs  watch.rs
src/commands/watch/: linux.rs  macos.rs  mod.rs
src/impl/: mod.rs  pasteboard.rs  path.rs  storage.rs
src/impl/clipboard/: linux.rs  macos.rs  mod.rs
