[package]
name = "clippers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
nix = { version = "0.27", features = ["fs"] }
objc = "0.2"
cocoa = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
