[package]
name = "clippers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
nix = { version = "0.27", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25"

